[package]
name = "crypto_pals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_libs"
harness = false

[dependencies]
base64 = "0.22.0"
lazy_static = "1.4.0"
